# qter

./: .gitignore  AGENTS.md  README.md  TODO.md  flake.nix  rust-toolchain.toml
.github/workflows/: deploy.yml
docs/: book.typ  introduction.typ
docs/cube/: cube.typ
docs/cube/cube-module/: Cargo.toml  cube_module.wasm
docs/cube/cube-module/src/: lib.rs
docs/overview/: example-programs.typ  memory-tapes.typ  programming-with-qter.typ  q-language.typ  qat-language.typ  rubiks-cube-theory.typ  standard-library.typ  what-is-qter.typ
docs/technical-docs/compiler/: compiler.typ  qat-grammar.typ
docs/technical-docs/robot/: assemble-electronics.typ  assemble-frame.typ  checklist.typ  electronics.typ  install-qteros.typ  set-up-visualizer.typ  setup-process.typ  software-setup.typ
docs/templates/: page.typ
docs/theory/: ccf.typ  ccs.typ  cycle-structures.typ  fixed-pieces.typ  group-theory.typ  ida-star.typ  introduction.typ  larger-puzzles.typ  mcc.typ  ori-pari-sharing.typ  parity-and-orientation-sum.typ  permutation-groups.typ  pruning-table-types.typ  pruning.typ  qas.typ  symmetry-reduction.typ  tree-searching.typ
git_hooks/: post-merge
media/docs/: book.typ  introduction.typ
media/docs/technical-docs/: ccs.typ
media/paper/: cube.typ  paper-just-diagrams.typ  paper.typ
media/paper/cube-module/: Cargo.toml
media/paper/tests/back/: test.typ
media/paper/tests/basic-3x3/: test.typ
media/paper/tests/combo/: test.typ
media/paper/tests/cube-2x2/: test.typ
media/paper/tests/cube-2x2-back/: test.typ
media/paper/tests/cube-4x4/: test.typ
media/paper/tests/distance/: test.typ
media/paper/tests/empty/: test.typ
media/paper/tests/name/: test.typ
media/paper/tests/offset/: test.typ
media/paper/tests/scale/: test.typ
media/paper/tests/scramble/: test.typ
media/posters/: contributions.typ  qat-poster.typ
media/video/hack-from-scratch/: script.typ
sage-scripts/: puzzle_geometry.ipynb
src/: Cargo.toml
src/.config/: nextest.toml
src/.zed/: settings.json
src/cli/: Cargo.toml  test.q  test.qat
src/cli/src/: main.rs
src/compiler/: Cargo.toml
src/compiler/src/: builtin_macros.rs  lib.rs  lua.rs  macro_expansion.rs  parsing-legacy.rs  parsing.rs  q_emitter.rs  rhai.rs  strip_expanded.rs
src/compiler/src/optimization/: combinators.rs  global.rs  local.rs  mod.rs
src/compiler/src/parsing/: mod.rs  parser.rs  tokenizer.rs
src/compiler/tests/average/: average.q  average.qat  average_transform.qat
src/compiler/tests/fib/: fib.q  fib.qat
src/compiler/tests/modulus/: modulus.q  modulus.qat
src/compiler/tests/multiply/: multiply.q  multiply.qat
src/compiler/tests/simple/: simple.q
src/cycle_combination_finder/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
src/cycle_combination_finder/benches/: trie_lcm_benchmark.rs
src/cycle_combination_finder/src/: ac3.rs  cycle_combination_details.rs  cycle_combinations_tree.rs  dp.rs  finder.rs  finder_old.rs  landau.py  least_one.rs  lib.rs  main.rs  min_piece_count.rs  nonemptyvec.rs  number_theory.rs  optimal_combination_structures.py  orderexps.rs  pareto_front.rs  possible_orders.py  possible_orders.rs  possible_orders.wl  primepowernum.rs  puzzle.rs  puzzle_orbit_definitions.py  rokicki.py  strategy.md  trie.rs
src/cycle_combination_finder/src/.cargo/: config.toml
src/cycle_combination_finder/src/pareto_front/: concurrent_pareto_front.rs  mod.rs  pareto_front.rs
src/cycle_combination_finder/src/puzzle/: cubeN.rs  minxN.rs  misc.rs
src/cycle_combination_finder/tests/: big.rs  cube3.rs  megaminx.rs  minx3.rs  playground.rs  slow.rs
src/cycle_combination_finder/tests/common/: mod.rs
src/cycle_combination_solver/: Cargo.toml  a  build.rs  rustfmt.toml
src/cycle_combination_solver/cpp/: permutator.cpp  permutator.h
src/cycle_combination_solver/src/: all_topos.rs  canonical_fsm.rs  lib.rs  orbit_puzzle.rs  permutator.rs  pruning.rs  puzzle.rs  puzzle_state_history.rs  solver.rs
src/cycle_combination_solver/src/orbit_puzzle/: slice_orbit_puzzle.rs
src/cycle_combination_solver/src/orbit_puzzle/cube3/: mod.rs
src/cycle_combination_solver/src/orbit_puzzle/cubeN/: avx2.rs  fallback.rs  mod.rs  simd8.rs
src/cycle_combination_solver/src/puzzle/: slice_puzzle.rs
src/cycle_combination_solver/src/puzzle/cube3/: avx2.rs  mod.rs  portable.rs  simd8and16.rs
src/cycle_combination_solver/tests/: cube3.rs  cube4.rs  megaminx.rs  playground.rs
src/cycle_combination_solver/tests/common/: mod.rs
src/g4g_program/: Cargo.toml
src/g4g_program/src/: lib.rs
src/interpreter/: Cargo.toml
src/interpreter/src/: instructions.rs  lib.rs  puzzle_states.rs
src/interpreter/src/puzzle_states/: mod.rs  remote_robot.rs
src/puzzle_geometry/: Cargo.toml
src/puzzle_geometry/src/: edge_cloud.rs  exact_trig.rs  knife.rs  lib.rs  num.rs  shapes.rs
src/qter_core/: Cargo.toml  prelude.qat
src/qter_core/src/: architectures.rs  lib.rs  runtime.rs  shared_facelet_detection.rs
src/robot/: Cargo.toml  TODO.md  frame.FCStd  push.sh
src/robot/.zed/: settings.json
src/robot/qteros/: flake.nix  rpi.nix  software.nix
src/robot/src/: lib.rs  main.rs  qvis_app.rs  rob_twophase.rs  robot_config.toml
src/robot/src/hardware/: config.rs  mod.rs  motor.rs  uart.rs
src/robot/src/hardware/motors/: accel_profile.rs  mod.rs  motor.rs
src/robot/src/hardware/uart/: regs.rs
src/robot_app/: Cargo.toml
src/robot_app/.cargo/: config.toml
src/robot_app/.zed/: settings.json
src/robot_app/src/: main.rs
src/visualiser/: .gitignore  Caddyfile  Cargo.toml  build.sh  package.json  tsconfig.json  visualiser.service
src/visualiser/src/: connection.rs  cube.rs  interpreter.rs  lib.rs  program.rs  robot_like.rs
src/visualiser/static/: config.json  index.css  index.html
src/visualiser/static/presets/: average.qat  fib.qat  presets.json  simple.qat
src/visualiser/web/: connect.ts  cube_view.ts  index.ts  init.ts  syntax_highlight.ts
src/visualizer/: Cargo.toml
src/visualizer/src/: cube_viz.rs  interpreter_loop.rs  interpreter_plugin.rs  lib.rs
