[workspace]
resolver = "3"
members = ["*"]
exclude = [".zed", ".config", "target"]

[workspace.lints.clippy]
type_complexity = "allow"
disallowed_types = "deny"

[workspace.dependencies]
qter_core.path = "qter_core"
interpreter.path = "interpreter"
compiler.path = "compiler"
g4g_program.path = "g4g_program"
puzzle_theory.git = "https://github.com/qter-project/puzzle-theory"
internment = { version = "0.8", features = [ "arc" ] }
itertools = "0.14.0"
chumsky = "0.12.0"
ariadne = "0.6.0"
log = "0.4.28"

[profile.bench]
debug = true
