[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
color-eyre = "0.6"
itertools.workspace = true
owo-colors = "4.2.0"
qter_core.workspace = true
compiler.workspace = true
interpreter.workspace = true
ariadne.workspace = true
log.workspace = true
internment.workspace = true
puzzle_theory.workspace = true
chumsky.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[[bin]]
name = "qter"
path = "src/main.rs"
