[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
qter_core = { path = "../qter_core" }
internment = { version = "0.8", features = [ "arc" ] }
itertools = "0.14"
chumsky = "0.12.0"
ariadne = "0.6.0"
puzzle_theory = { git = "https://github.com/qter-project/puzzle-theory" }
rhai = { version = "1.24.0", default-features = false, features = [ "internals" ] }

[lints]
workspace = true
