[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
qter_core.workspace = true
internment.workspace = true
itertools.workspace = true
chumsky.workspace = true
ariadne.workspace = true
puzzle_theory.workspace = true
rhai = { version = "1.24.0", default-features = false, features = [ "internals" ] }

[lints]
workspace = true
