[package]
name = "cycle_combination_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
qter_core.workspace = true
puzzle_theory.workspace = true
log.workspace = true
humanize-duration.workspace = true
fxhash = "0.2.1"
num-integer = "0.1.46"
rayon = "1.11.0"
dashmap = { version = "6.1.0", features = ["rayon"] }
thiserror.workspace = true
env_logger = "0.11.9"
bitgauss = { git = "https://github.com/qter-project/bitgauss" }
union-find = { git = "https://github.com/qter-project/union-find-rs" }

[dev-dependencies]
test-log.workspace = true

[lints]
workspace = true
