[package]
edition = "2024"
name = "cycle_combination_finder"
version = "0.1.0"

[dependencies]
bitgauss = { git = "https://github.com/qter-project/bitgauss" }
bumpalo = { version = "3.20.3", features = ["allocator_api"] }
core_affinity = "0.8.3"
cpu-time = "1.0.0"
dashmap = { version = "6.2.1", features = ["rayon"] }
env_logger = "0.11.10"
fxhash = "0.2.1"
humanize-duration.workspace = true
log.workspace = true
num-integer = "0.1.46"
puzzle_theory.workspace = true
rayon = "1.12.0"
seqlock = "0.2.0"
thiserror.workspace = true
union-find = { git = "https://github.com/qter-project/union-find-rs" }

[dev-dependencies]
criterion = "0.8.2"
fastrand = "2.4.1"
test-log.workspace = true

[[bench]]
harness = false
name = "trie_lcm_benchmark"

[lints]
workspace = true
