[package]
name = "cycle_combination_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
enum_dispatch = "0.3.13"
fastrand = "2.3.0"
fxhash = "0.2.1"
generativity = "1.1.0"
heuristic-graph-coloring = "0.1.0"
humanize-duration = "0.0.7"
integer-partitions = "0.1.1"
itertools.workspace = true
log.workspace = true
memoize = "0.4.2"
num-traits = "0.2.19"
pareto_front = "1.0.1"
qter_core.workspace = true
thiserror = "2.0.11"
puzzle_theory.workspace = true

[dev-dependencies]
pretty_env_logger = "0.5.0"
test-log = "0.2.18"

[build-dependencies]
cfg_aliases = "0.2.1"

[lints]
workspace = true
