[package]
name = "cycle_combination_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
enum_dispatch = "0.3.13"
fastrand = "2.3.0"
fxhash = "0.2.1"
generativity = "1.1.0"
heuristic-graph-coloring = "0.1.0"
humanize-duration.workspace = true
integer-partitions = "0.1.1"
itertools.workspace = true
log.workspace = true
memoize = "0.4.2"
num-traits = "0.2.19"
qter_core.workspace = true
thiserror = "2.0.11"
puzzle_theory.workspace = true

[dev-dependencies]
pretty_env_logger.workspace = true
test-log.workspace = true

[build-dependencies]
cfg_aliases = "0.2.1"

[lints]
workspace = true
