[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
qter_core.workspace = true
internment.workspace = true
compiler.workspace = true
log.workspace = true
puzzle_theory.workspace = true
pretty_assertions = "1.4.1"
tokio = { version = "1.49.0", features = ["macros"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"], optional = true }
serde_json = { version = "1.0.149", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt"] }

[lints]
workspace = true

[features]
remote_robot = ["dep:serde_json", "dep:tokio-util", "tokio/io-util", "puzzle_theory/serde"]
