[package]
name = "qter_core"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14"
internment = { version = "0.8", features = [ "arc" ] }
pog_ans = { git = "https://github.com/qter-project/pog-ans" }
puzzle_theory = { git = "https://github.com/qter-project/puzzle-theory" }

[lints]
workspace = true
