[package]
name = "robot"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
rppal = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
interpreter = { path = "../interpreter", features = [ "remote_robot" ] }
qter_core = { path = "../qter_core" }
internment = { version = "0.8", features = [ "arc" ] }
dirs = "6.0.0"
itertools = "0.13"
thread-priority = "3.0.0"
paste = "1.0.15"
serde_repr = "0.1.20"
puzzle_theory = { git = "https://github.com/qter-project/puzzle-theory", features = ["serde"] }
# TODO: Enable io_uring once it's stable in tokio?
tokio = { version = "1.49.0", default-features = false, features = ["net", "rt-multi-thread", "tracing", "macros"] }
color-eyre = "0.6.5"

[lints]
workspace = true
