[package]
name = "robot"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log.workspace = true
rppal = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
interpreter = { workspace = true, features = ["remote_robot"] }
qter_core.workspace = true
internment.workspace = true
dirs = "6.0.0"
itertools.workspace = true
thread-priority = "3.0.0"
paste = "1.0.15"
serde_repr = "0.1.20"
puzzle_theory = { workspace = true, features = ["serde"] }
color-eyre = "0.6.5"
wtransport = "0.7.0"
tiny_http = "0.12.0"

# TODO: Enable io_uring once it's stable in tokio?
[dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["net", "rt-multi-thread", "tracing", "macros", "process"]

[lints]
workspace = true

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
